--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>NASA ASTEROIDS</title>
+    <title>NASA ASTEROIDS API</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+
   </head>
   <body>
+    
+    <div class="container">
+      <h1>Nasa Asteroids</h1>
+    </div>
+  </div>
+
+    <script srt="js/jquery-3.1.1.min.js"></script>
 
   </body>
 </html>
