--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
   </head>
   <body>
-    
+
     <div class="container">
-      <h1>Nasa Asteroids</h1>
+      <div class="page-header">
+      <h1>NASA Asteroids</h1>
     </div>
   </div>
 
-    <script srt="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
